--- a/style.css
+++ b/style.css
@@ -1,33 +1,142 @@
+
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+    font-size: auto;
 }
 
+.b {
+    justify-content: center;
+    text-align: center;
+}
+
+
 html, body {
+    padding: 30px;
 }
 
 body {
-
-    margin: 100%;
-    display: flex;
+    text-align: center;
     justify-content: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+    font-family:'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+    background: whitesmoke;
+
+    
 }
 
 main {
-    flex: 1;
-    display: flex;
-    justify-content: space-around;
+    
 }
 
 .container {
-    margin-top: 20px;
-    padding: 20px;
-    display: flex;
-    justify-content: center;
+    
 }
-.testinput {
-    margin-top: 20px;
+#testinput {
+    margin-left: 100px;
+    width: 10%;
+    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+    font-size: 18px;
+    color: black;
+   
+   
+}
+
+#jobSelect {
+
+    text-align: center;
+    position: left;
+    width: 25%;
+    font-family: 'Open Sans', 'Helvetica Neue', 'Segoe UI', 'Calibri', 'Arial', sans-serif;
+    font-size: 18px;
+    color: black;
+    
+
+}
+
+
+#button {
+
+    text-align: right;
+    color: #494949 !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background:whitesmoke;
+    padding: 4px;
+    border: 3px solid black !important;
+    display: inline-block;
+    transition: all 0.4s ease 0s;
+    padding-right: 20px;
+    padding-left: 20px;
+    font-weight: bold;
+    
+    
+}
+
+#root{
+    margin-left: 100px;
+    text-align: right;
+    margin-top: 50px;
+    
+}
+
+#total{ 
+
+    text-align: center;
+    border: 4px solid black !important;
+    width:auto;
+    max-width: 25%;
+    font-size: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    background:white
+
+}
+#totalprice{
+    align-items: right;
+    text-align: center;
+    display:flex;
+    justify-content: flex-end;
+   
+    font-size: 25px;
+
+}
+
+.print-in {
+    text-align: left;
+    margin-right: 250px;
+    margin-left: 250px;
+    padding-block: 5px;
+    border: 1px solid;
+
+    
+
+    
+}
+
+#myCheck {
+    
+    
+}
+.price {
+    padding-right: 10px;
+}
+
+.print-in{
+    display: flex;
+    justify-content: space-between;
+    background: rgb(169,241,160);
+    background: rgb(200,255,225);
+background: linear-gradient(90deg, rgba(200,255,225,1) 0%, rgba(198,255,202,1) 100%);
+}
+#testbox{
+    margin-top: 50px;
+    display:flex;
+    justify-content: space-between;
+    padding-right:10px;
+    padding-left:10px;
+    margin-right: 250px;
+    margin-left:250px;
+    align-items: center;
+    border: 
 }
